# bl1nk-agents-manager

./: .codespellrc  .commitlintrc.json  .editorconfig  .gitattributes  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .shellcheckrc  AGENTS.md  API.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Config.example.toml  DESIGN.md  GEMINI.md  Makefile  PRODUCT.md  QWEN.md  README.md  ROADMAP.md  SECURITY.md  config.toml  config_test.toml  gemini-extension.json  hermes_conversation_20260418_114015.json  justfile  package.json  rustfmt.toml  todo.md
crates/core/: Cargo.toml  README.md
crates/core/src/: README.md  lib.rs  rate_limit.rs  test_utils.rs
crates/core/src/adapters/: README.md
crates/core/src/adapters/acp/: README.md  mod.rs  normalized.rs
crates/core/src/adapters/codex/: README.md
crates/core/src/adapters/gemini/: README.md
crates/core/src/agents/: AGENTS.md  README.md  auditor.rs  consultant.rs  creator.rs  expert.rs  explorer.rs  extractor.rs  manager.rs  mod.rs  observer.rs  orchestrator.rs  orchestrator_junior.rs  planner.rs  prompt_builder.rs  register.rs  researcher.rs  router.rs  types.rs  utils.rs
crates/core/src/cli/: README.md  mod.rs
crates/core/src/config/: README.md  config.rs  extra_types.rs  handler.rs  loader.rs  mod.rs  schema.rs
crates/core/src/events/: README.md  mod.rs
crates/core/src/extension-handlers/: config-handlers.rs
crates/core/src/features/: mod.rs
crates/core/src/features/background-agent/: concurrency.rs  constants.rs  mod.rs  results.rs  spawner.rs  state.rs  task_state.rs  types.rs
crates/core/src/filesystem/: README.md  mod.rs
crates/core/src/hooks/: AGENTS.md  README.md  claude_code_session_state.rs  context_window_monitor.rs  empty_task_response_detector.rs  mod.rs  session_notification.rs  session_notification_utils.rs  todo_continuation_enforcer.rs  tool_output_truncator.rs
crates/core/src/hooks/agent_usage_reminder/: AGENTS.md  README.md  constants.rs  index.rs  mod.rs  storage.rs  types.rs
crates/core/src/hooks/anthropic_context_window_limit_recovery/: AGENTS.md  README.md  executor.rs  index.rs  mod.rs  parser.rs  pruning_deduplication.rs  pruning_types.rs  storage.rs  types.rs
crates/core/src/hooks/atlas/: AGENTS.md  README.md  mod.rs
crates/core/src/hooks/auto_slash_command/: AGENTS.md  README.md  constants.rs  detector.rs  executor.rs  mod.rs  types.rs
crates/core/src/hooks/auto_update_checker/: AGENTS.md  README.md  constants.rs  mod.rs
crates/core/src/hooks/background_notification/: AGENTS.md  README.md  mod.rs
crates/core/src/hooks/category_skill_reminder/: AGENTS.md  README.md  index.rs  mod.rs
crates/core/src/hooks/claude_code_hooks/: AGENTS.md  README.md  config.rs  config_loader.rs  index.rs  mod.rs  plugin_config.rs  post_tool_use.rs  pre_compact.rs  pre_tool_use.rs  stop.rs  todo.rs  tool_input_cache.rs  transcript.rs  types.rs  user_prompt_submit.rs
crates/core/src/hooks/comment_checker/: AGENTS.md  README.md  mod.rs  types.rs
crates/core/src/hooks/compaction_context_injector/: AGENTS.md  README.md  index.rs  mod.rs
crates/core/src/hooks/delegate_task_retry/: AGENTS.md  README.md  index.rs  mod.rs
crates/core/src/hooks/directory_agents_injector/: AGENTS.md  README.md  constants.rs  mod.rs  storage.rs  types.rs
crates/core/src/hooks/directory_readme_injector/: AGENTS.md  README.md  constants.rs  mod.rs  storage.rs
crates/core/src/hooks/edit_error_recovery/: AGENTS.md  README.md  index.rs  mod.rs
crates/core/src/hooks/hook_message_injector/: README.md  mod.rs
crates/core/src/hooks/interactive_bash_session/: AGENTS.md  README.md  constants.rs  index.rs  mod.rs  (+2 more)
crates/core/src/mcp/: README.md  mod.rs  protocol.rs
crates/core/src/projects/: README.md  mod.rs
crates/core/src/rpc/: README.md  mod.rs
crates/core/src/search/: README.md  mod.rs
crates/core/src/session/: README.md  mod.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: README.md  main.rs
(+806 files in other folders)
