[package]
name = "bl1nk-agents-manager"
version = "0.1.0"
edition = "2021"
authors = ["billlzzz18"]
description = "Intelligent MCP/ACP orchestrator with bundled PMAT support"
license = "MIT"
repository = "https://github.com/billlzzz18/bl1nk-agents-manager"

[features]
default = ["schema-generation"]
schema-generation = ["pmcp/schema-generation"]
proptest = ["dep:proptest"]
bundle-pmat = []

[dependencies]
# Protocol implementations
pmcp = { version = "1.8", features = ["schema-generation"] }
# agent-client-protocol = "0.6"  # ถ้าจะใช้ ACP แยก

# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
jsonschema = "0.18"

# Error handling
anyhow = "1.0.99"
thiserror = "1.0"  # เพิ่ม thiserror สำหรับ custom errors

# Config parsing
toml = "0.8"
serde_yaml = "0.9"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }  # เพิ่มสำหรับ CLI args

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
regex = "1.0"
ignore = "0.4"
base64 = "0.22"
url = "2.5"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Keyword validation and search (จาก vendor)
bl1nk-keyword-core = { path = "vendor/bl1nk-keyword-validator/core" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Optional testing
proptest = { version = "1.0", optional = true }
textwrap = "0.16.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockall = "0.13"
serial_test = "3.0"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"

[[bin]]
name = "bl1nk-agents-manager"
path = "src/main.rs"

[[bin]]
name = "validate-real-data"
path = "scripts/validate_real_data.rs"

[profile.release]
opt-level = 3
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols for smaller binary
panic = "abort"      # Smaller binary size
[workspace]
members = [
    "crates/core",
    "crates/server",
]
resolver = "2"
