[package]
name = "bl1nk-core"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
pmcp = { version = "1.8", features = ["schema-generation"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tempfile = "3.8"
pathdiff = "0.2"
tempdir = "0.3"
serial_test = "2.0"
schemars = "1.0"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
chrono = "0.4"
regex = "1.0"
ignore = "0.4"
base64 = "0.22"
url = "2.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_yaml = "0.9" # Added for agent registry
lazy_static = "1.4"
log = "0.4"
glob = "0.3"
sha2 = "0.10"
agent-client-protocol = "0.9.4"

[features]
default = ["schema-generation"]
schema-generation = ["pmcp/schema-generation"]
bundle-pmat = [] # Placeholder features
